kubernete/cilium/2_network/05_multi-networking/09_client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: client
  labels:
    app: client
  annotations:
    network.v1alpha1.isovalent.com/pod-networks: default,jupiter
spec:
  containers:
    - name: client-container
      image: quay.io/cilium/alpine-curl:v1.5.0
      command:
        - /bin/ash
        - -c
        - sleep 10000000
